--- a/_config.yml
+++ b/_config.yml
@@ -51,11 +51,11 @@ about_profile_image: images/profile.png
 about_content: | # this will include new lines to allow paragraphs
     Originally a Spanish national, I have lived in London for over a decade where I carried out both my studies and the onset of my professional career.
    
-    As a professional, I have developed mainly at global <mark>Language Service Providers</mark> (LSP) working as a <mark>Localization Engineer</mark>. Over the years I have prepared for translation a wide range of file formats into several Computer Assisted Tools, both <mark>desktop-based</mark> (Wordfast, MemoQ, or SDL Trados) and <mark>web-based</mark> (XTM). Also, I have been involved in <mark>migrations</mark> into web-based TMSs.
-    
-    Familiar with the full Microsoft 365 suit, and e-learning apps, but what I love the most is preparing and engineering <mark>software-related plaint text files</mark> in any programming language as it involves creating and developing parsers as well as fine-tuning <mark>regular expressions</mark>. Ability to create scripts to automate internal tasks.
+    Over the years, I have specialized as a <mark>Localization Engineer</mark> working for global <mark>Language Service Providers</mark> (LSPs), and gained extensive experience in preparing diverse file formats for translation, working with industry-leading Computer-Assisted Translation (CAT) tools such as Wordfast, <mark>MemoQ</mark>, SDL Trados, and cloud-based platforms like <mark>XTM</mark>.
 
-    Currently working as a software developer in Madrid, Spain and would be willing to go back to localization for the right position ideally on the client side.
+    In addition to working with Microsoft 365 and <mark>e-learning applications</mark>, I am passionate about engineering text files across multiple programming languages. My expertise includes developing custom <mark>parsers</mark>, <mark>regular expressions</mark>, and optimizing and automating processes through scripting, which enhances both the accuracy and speed of localization projects.
+
+    Currently, I am working as a <mark>software developer</mark> in Madrid, Spain. However, I am eager to return to the localization industry, ideally in a client-side role within a dynamic and innovative environment. I am especially drawn to opportunities in the pharmaceutical sector, where I can apply my technical expertise to support critical global communications in a fast-paced, regulated industry.
 content:
 
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # 
