--- a/_config.yml
+++ b/_config.yml
@@ -315,8 +315,8 @@ content:
       <img src="/images/memoq.png" width="20%" height="20%" style="margin-bottom:5%">
       <img src="/images/sdl.png" width="20%" height="20%" style="margin-bottom:5%">
       <img src="/images/XTM.png" width="20%" height="20%" style="margin-bottom:5%">
+      <img src="/images/articulate.png" width="20%" height="20%" style="margin-bottom:5%">
       <img src="/images/i18n.png" width="10%" height="10%" style="margin-bottom:5%">
-      <img src="/images/l10n.png" width="20%" height="10%" style="margin-bottom:5%">
       <img src="/images/total_commander.png" width="10%" height="10%" style="margin-right:5%; margin-bottom:5%">
       <img src="/images/emeditor.png" width="20%" height="10%" style="margin-bottom:5%">
       <img src="/images/regex.jpeg" width="20%" height="10%" style="margin-bottom:5%">
