--- a/_config.yml
+++ b/_config.yml
@@ -121,7 +121,7 @@ content:
 
         description: | # this will include new lines to allow paragraphs
 
-          As part of the localization Engineering team, we were reposible for receiving clients' products, assessing their suitability for localization processing and putting together quotes.
+          As part of the localization Engineering team, we were responsible for receiving clients' products, assessing their suitability for localization processing and putting together quotes.
           <mark>Segmentation</mark> and <mark>parse development</mark> were core parts of our everyday load.
 
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # 
