The London Oratory School

--- a/_config.yml
+++ b/_config.yml
@@ -149,7 +149,7 @@ content:
 #        quote: >
 
         description: | # this will include new lines to allow paragraphs
-            Helping students prepare their A Levels speaking exams.
+            Help students prepare their A Levels speaking exams.
 
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # 
 
