--- a/_config.yml
+++ b/_config.yml
@@ -132,6 +132,18 @@ content:
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # 
 
       - layout: left
+        title: 
+        link:
+        link_text: 
+        sub_title: 
+        caption: 
+#        quote: >
+
+        description: | # this will include new lines to allow paragraphs
+            
+# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # 
+
+      - layout: left
         title: GAMESYS LIMITED
         link: https://www.gamesysgroup.com/
         link_text: gamesysgroup.com
@@ -289,14 +301,10 @@ content:
 
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # 
 
-  - title: A Little More About Me
-    layout: text
-    content: | # this will include new lines to allow paragraphs
-      Alongside my interests in internationalization, and software engineering some of my other interests and hobbies are:
+  #- title: 
+  #  layout: text
+  #  content: | # this will include new lines to allow paragraphs
 
-      - Investing and capital management
-      - Meditation
-      - Music
 
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # 
 
